nef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:12
          args:
            - "-c"
            - "shared_buffers=256MB"
            - "-c"
            - "max_connections=200"
          volumeMounts:
            - name: app-db-data
              mountPath: /var/lib/postgresql/data/pgdata
      volumes:
        - name: app-db-data
          emptyDir: {}
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: pgadmin
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: pgadmin
#   template:
#     metadata:
#       labels:
#         app: pgadmin
#     spec:
#       containers:
#         - name: pgadmin
#           image: dpage/pgadmin4
#           ports:
#             - containerPort: 5050
#           env:
#             - name: PGADMIN_DEFAULT_EMAIL
#               valueFrom:
#                 configMapKeyRef:
#                   name: nef-configmap
#                   key: PGADMIN_DEFAULT_EMAIL
#             - name: PGADMIN_DEFAULT_PASSWORD
#               valueFrom:
#                 configMapKeyRef:
#                   name: nef-configmap
#                   key: PGADMIN_DEFAULT_PASSWORD
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-nef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-nef
  template:
    metadata:
      labels:
        app: mongo-nef
    spec:
      containers:
        - name: mongo-nef
          image: mongo:4.4.10
          volumeMounts:
            - name: app-mongo-db-data
              mountPath: /data/db
      volumes:
        - name: app-mongo-db-data
          emptyDir: {}
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongo-express
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongo-express
#   template:
#     metadata:
#       labels:
#         app: mongo-express
#     spec:
#       containers:
#         - name: mongo-express
#           image: mongo-express:1.0.0-alpha.4
#           ports:
#             - containerPort: 8081
#           env:
#             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
#               valueFrom:
#                 configMapKeyRef:
#                   name: nef-configmap
#                   key: MONGO_USER
#             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
#               valueFrom:
#                 configMapKeyRef:
#                   name: nef-configmap
#                   key: MONGO_PASSWORD
#             - name: ME_CONFIG_MONGODB_URL
#               valueFrom:
#                 configMapKeyRef:
#                   name: nef-configmap
#                   key: ME_CONFIG_MONGODB_URL
#             - name: ME_CONFIG_MONGODB_ENABLE_ADMIN
#               valueFrom: 
#                 configMapKeyRef:
#                     name: nef-configmap
#                     key: MONGO_EXPRESS_ENABLE_ADMIN
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dimfrag/nef-backend:1.0
          imagePullPolicy: Always
          ports:
             - containerPort: 80
          command: ["/start-reload.sh"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: reverse-proxy
          image: dimfrag/nef-nginx:1.0
          command:
            - "/bin/sh"
            - "-c"
            - "/self-signed-crt.sh && /dynamic_ports.sh"
          ports:
            - containerPort: 80
            - containerPort: 443
