nef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nef-db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pgadmin
# spec:
#   selector:
#     app: pgadmin
#   ports:
#     - protocol: TCP
#       port: 5050
# ---
apiVersion: v1
kind: Service
metadata:
  name: nef-mongo
spec:
  selector:
    app: mongo-nef
  ports:
    - protocol: TCP
      port: 27017
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-express
# spec:
#   selector:
#     app: mongo-express
#   ports:
#     - protocol: TCP
#       port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: nef-backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: reverse-proxy
# spec:
#   selector:
#     app: reverse-proxy
#   ports:
#     - name: http-port
#       protocol: TCP
#       port: 8090
#       targetPort: 80
#     - name: https-port
#       protocol: TCP
#       port: 4443
#       targetPort: 443
